--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -4,6 +4,8 @@
     <attr name="attrFfCvInput" format="reference"/>
     <attr name="attrFfTil" format="reference"/>
     <attr name="attrFfTiet" format="reference"/>
+
     <attr name="attrFfItemCv" format="reference"/>
     <attr name="attrFfItemTvTranslate" format="reference"/>
+    <attr name="attrFfItemTvNote" format="reference"/>
 </resources>
