--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -23,5 +23,6 @@
         <item name="attrFfTiet">@style/ff_tiet_style.dark_theme</item>
         <item name="attrFfItemCv">@style/ff_item_cv_style.dark_theme</item>
         <item name="attrFfItemTvTranslate">@style/ff_item_tv_translate_style.dark_theme</item>
+        <item name="attrFfItemTvNote">@style/ff_item_tv_note_style.dark_theme</item>
     </style>
 </resources>
