--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,5 +27,6 @@
         <item name="attrFfItemCv">@style/ff_item_cv_style</item>
         <item name="attrFfItemTvTranslate">@style/ff_item_tv_translate_style</item>
         <item name="attrFfItemTvNote">@style/ff_item_tv_note_style</item>
+        <item name="attrActivityBottomNavView">@style/activity_bottom_nav_view_style</item>
     </style>
 </resources>
