--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="activity_bottom_nav_view_style" parent="">
+        <item name="android:background">@color/secondaryLightColor</item>
+    </style>
+
     <style name="ff_view_style" parent="">
         <item name="android:background">@color/secondaryBackgroundColor</item>
         <item name="android:padding">@dimen/ff_constraint_layout_padding</item>
