--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,15 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/main_container"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@id/main_bnv"
         app:layout_constraintEnd_toEndOf="parent"
-        android:name="com.example.gb_pprog.presentation.firstfragment.FirstFragment"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/main_navigation"
         tools:context=".presentation.MainActivity" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
