--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -12,15 +12,13 @@
         tools:layout="@layout/fragment_first" >
         <action
             android:id="@+id/action_firstFragment_to_timerFragment"
-            app:destination="@id/timerFragment" />
+            app:destination="@id/timerFragment"
+            app:popUpTo="@id/firstFragment"
+            app:popUpToInclusive="false" />
     </fragment>
     <fragment
         android:id="@+id/timerFragment"
         android:name="com.example.gb_pprog.hw4.presentation.TimerFragment"
         android:label="fragment_timer"
-        tools:layout="@layout/fragment_timer" >
-        <action
-            android:id="@+id/action_timerFragment_to_firstFragment"
-            app:destination="@id/firstFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_timer" />
 </navigation>
