--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/firstFragment"
-        android:name="com.example.gb_pprog.presentation.firstfragment.FirstFragment"
+        android:name="com.example.gb_pprog.presentation.translatorfragment.TranslatorFragment"
         android:label="fragment_first"
         tools:layout="@layout/fragment_first" >
         <action
