--- a/app/src/main/res/layout/translator_item.xml
+++ b/app/src/main/res/layout/translator_item.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="?attrFfItemCv"
+    style="?attrTranslatorItemCv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardUseCompatPadding="true">
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/ff_item_iv"
+            android:id="@+id/translator_item_iv"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_marginVertical="8dp"
@@ -26,15 +26,15 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/ff_item_tv_translate"
-                style="?attr/attrFfItemTvTranslate"
+                android:id="@+id/translator_item_tv_translate"
+                style="?attr/attrTranslatorItemTvTranslate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="Test text" />
 
             <TextView
-                android:id="@+id/ff_item_tv_note"
-                style="@style/ff_item_tv_note_style"
+                android:id="@+id/translator_item_tv_note"
+                style="@style/translator_item_tv_note_style"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
