--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation"
-    app:startDestination="@id/firstFragment">
+    app:startDestination="@id/translatorFragment">
 
     <fragment
-        android:id="@+id/firstFragment"
+        android:id="@+id/translatorFragment"
         android:name="com.example.gb_pprog.presentation.translatorfragment.TranslatorFragment"
         android:label="fragment_first"
-        tools:layout="@layout/fragment_first" >
+        tools:layout="@layout/fragment_translator" >
         <action
-            android:id="@+id/action_firstFragment_to_timerFragment"
+            android:id="@+id/action_translatorFragment_to_timerFragment"
             app:destination="@id/timerFragment"
-            app:popUpTo="@id/firstFragment"
+            app:popUpTo="@id/translatorFragment"
             app:popUpToInclusive="false" />
     </fragment>
     <fragment
