--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -15,10 +15,20 @@
             app:destination="@id/timerFragment"
             app:popUpTo="@id/translatorFragment"
             app:popUpToInclusive="false" />
+        <action
+            android:id="@+id/action_translatorFragment_to_favoriteFragment"
+            app:destination="@id/favoriteFragment"
+            app:popUpTo="@id/translatorFragment"
+            app:popUpToInclusive="false" />
     </fragment>
     <fragment
         android:id="@+id/timerFragment"
         android:name="com.example.gb_pprog.hw4.presentation.TimerFragment"
         android:label="fragment_timer"
         tools:layout="@layout/fragment_timer" />
+    <fragment
+        android:id="@+id/favoriteFragment"
+        android:name="com.example.gb_pprog.presentation.favoritefragment.FavoriteFragment"
+        android:label="fragment_favorite"
+        tools:layout="@layout/fragment_favorite" />
 </navigation>
