--- a/app/src/main/res/layout/translator_item.xml
+++ b/app/src/main/res/layout/translator_item.xml
@@ -7,39 +7,75 @@
     android:layout_height="wrap_content"
     app:cardUseCompatPadding="true">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/translator_constraint"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/translator_item_iv"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_marginVertical="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginVertical="6dp"
+            android:layout_marginStart="6dp"
+            app:layout_constraintBottom_toBottomOf="@id/translator_constraint"
+            app:layout_constraintEnd_toStartOf="@id/translator_item_barrier_1"
+            app:layout_constraintStart_toStartOf="@id/translator_constraint"
+            app:layout_constraintTop_toTopOf="@id/translator_constraint"
             tools:src="@color/black" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/translator_item_barrier_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="end"
+            app:constraint_referenced_ids="translator_item_iv" />
 
-            <TextView
-                android:id="@+id/translator_item_tv_translate"
-                style="?attr/attrTranslatorItemTvTranslate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="Test text" />
+        <TextView
+            android:id="@+id/translator_item_tv_translate"
+            style="?attr/attrTranslatorItemTvTranslate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@id/translator_item_tv_note"
+            app:layout_constraintEnd_toStartOf="@id/translator_item_barrier_2"
+            app:layout_constraintStart_toEndOf="@id/translator_item_barrier_1"
+            app:layout_constraintTop_toTopOf="@id/translator_constraint"
+            app:layout_constraintWidth_percent="0.6"
+            tools:text="Test text" />
 
-            <TextView
-                android:id="@+id/translator_item_tv_note"
-                style="@style/translator_item_tv_note_style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                tools:text="asdasf"
-                tools:visibility="visible" />
-        </LinearLayout>
-    </LinearLayout>
+        <TextView
+            android:id="@+id/translator_item_tv_note"
+            style="@style/translator_item_tv_note_style"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/translator_constraint"
+            app:layout_constraintEnd_toStartOf="@id/translator_item_barrier_2"
+            app:layout_constraintStart_toEndOf="@id/translator_item_barrier_1"
+            app:layout_constraintTop_toBottomOf="@id/translator_item_tv_translate"
+            app:layout_constraintWidth_percent="0.6"
+            tools:text="asdasf"
+            tools:visibility="visible" />
+
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/translator_item_barrier_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="start"
+            app:constraint_referenced_ids="translator_item_btn" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/translator_item_btn"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginVertical="6dp"
+            android:layout_marginEnd="6dp"
+            android:background="@drawable/ic_baseline_favorite_diactive"
+            app:layout_constraintBottom_toBottomOf="@id/translator_constraint"
+            app:layout_constraintEnd_toEndOf="@id/translator_constraint"
+            app:layout_constraintStart_toEndOf="@id/translator_item_barrier_2"
+            app:layout_constraintTop_toTopOf="@id/translator_constraint" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
