--- a/app/src/main/res/layout/translator_item.xml
+++ b/app/src/main/res/layout/translator_item.xml
@@ -62,10 +62,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="start"
-            app:constraint_referenced_ids="translator_item_btn" />
+            app:constraint_referenced_ids="translator_item_favorite_btn" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/translator_item_btn"
+            android:id="@+id/translator_item_favorite_btn"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginVertical="6dp"
