--- a/app/src/main/res/layout/favorite_item.xml
+++ b/app/src/main/res/layout/favorite_item.xml
@@ -9,11 +9,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/favorite_item_tv"
-            android:layout_width="match_parent"
+            android:id="@+id/favorite_item_word"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            style="?attr/attrTranslatorItemTvTranslate"
+            tools:text="TestText"/>
+
+        <TextView
+            android:id="@+id/favorite_item_translation"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             style="?attr/attrTranslatorItemTvTranslate"
             tools:text="TestText"/>
