--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,9 +7,8 @@
 
     <style name="translator_view_style" parent="">
         <item name="android:background">@color/secondaryBackgroundColor</item>
-        <item name="android:paddingStart">@dimen/translator_constraint_layout_padding</item>
-        <item name="android:paddingEnd">@dimen/translator_constraint_layout_padding</item>
-        <item name="android:paddingTop">@dimen/translator_constraint_layout_padding</item>
+        <item name="android:layout_marginTop">@dimen/translator_constraint_layout_margin</item>
+        <item name="android:layout_marginHorizontal">@dimen/translator_constraint_layout_margin</item>
     </style>
 
     <style name="translator_cv_input_style" parent="">
@@ -24,7 +23,7 @@
         <item name="android:padding">@dimen/translator_til_padding</item>
         <item name="counterEnabled">true</item>
         <item name="endIconCheckable">true</item>
-        <item name="endIconMode">custom</item>
+        <item name="endIconMode">clear_text</item>
         <!--Drawables-->
         <item name="counterMaxLength">@integer/translator_til_input_max_counter</item>
         <item name="placeholderText">@string/translator_til_place_holder_text</item>
