--- a/app/src/main/res/layout/translator_item.xml
+++ b/app/src/main/res/layout/translator_item.xml
@@ -64,18 +64,17 @@
             app:barrierDirection="start"
             app:constraint_referenced_ids="translator_item_favorite_btn" />
 
-        <androidx.appcompat.widget.AppCompatButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/translator_item_favorite_btn"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginVertical="6dp"
-            android:layout_marginEnd="6dp"
-            android:background="@drawable/ic_baseline_favorite_diactive"
+            android:src="@drawable/ic_baseline_favorite_diactive"
+            android:background="@drawable/round_button"
+            android:layout_margin="6dp"
             app:layout_constraintBottom_toBottomOf="@id/translator_constraint"
             app:layout_constraintEnd_toEndOf="@id/translator_constraint"
             app:layout_constraintStart_toEndOf="@id/translator_item_barrier_2"
             app:layout_constraintTop_toTopOf="@id/translator_constraint" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
