немного изменена favorite_btn

--- a/app/src/main/res/layout/translator_item.xml
+++ b/app/src/main/res/layout/translator_item.xml
@@ -68,9 +68,9 @@
             android:id="@+id/translator_item_favorite_btn"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:src="@drawable/ic_baseline_favorite_diactive"
-            android:background="@drawable/round_button"
             android:layout_margin="6dp"
+            android:background="@drawable/translator_item_favorite_btn_drawable"
+            android:src="@drawable/ic_baseline_favorite_diactive"
             app:layout_constraintBottom_toBottomOf="@id/translator_constraint"
             app:layout_constraintEnd_toEndOf="@id/translator_constraint"
             app:layout_constraintStart_toEndOf="@id/translator_item_barrier_2"
