удалил все зависимости из fragment_timer.xml

--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#FFFFFF"
     android:layout_height="match_parent"
     tools:context=".mytimer.TimerFragment">
 
@@ -12,7 +13,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="00:00:00"
-        android:textColor="@color/secondaryTextColor"
+        android:textColor="#BF000000"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="Start"
-        android:textColor="@color/secondaryTextColor"
+        android:textColor="#BF000000"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@id/ft_pause_btn"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="Pause"
-        android:textColor="@color/secondaryTextColor"
+        android:textColor="#BF000000"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@id/ft_stop_btn"
         app:layout_constraintStart_toEndOf="@id/ft_start_btn"
@@ -49,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="Stop"
-        android:textColor="@color/secondaryTextColor"
+        android:textColor="#BF000000"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/ft_pause_btn"
