--- a/mytimer/src/main/res/layout/fragment_timer.xml
+++ b/mytimer/src/main/res/layout/fragment_timer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="#FFFFFF"
     android:layout_height="match_parent"
-    tools:context=".mytimer.TimerFragment">
+    tools:context=".TimerFragment">
 
     <TextView
         android:id="@+id/ft_timer_tv"
