--- a/app/src/main/res/layout/fragment_translator.xml
+++ b/app/src/main/res/layout/fragment_translator.xml
@@ -6,7 +6,7 @@
     style="?attrTranslatorView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.translatorfragment.TranslatorFragment">
+    tools:context=".ui.translatorfragment.TranslatorFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/translator_cv_input"
