--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/translatorFragment"
-        android:name="com.example.gb_pprog.presentation.translatorfragment.TranslatorFragment"
+        android:name="com.example.gb_pprog.ui.translatorfragment.TranslatorFragment"
         android:label="fragment_first"
         tools:layout="@layout/fragment_translator" >
         <action
@@ -23,12 +23,12 @@
     </fragment>
     <fragment
         android:id="@+id/timerFragment"
-        android:name="com.example.gb_pprog.presentation.timerfragment.TimerFragment"
+        android:name="com.example.gb_pprog.ui.timerfragment.TimerFragment"
         android:label="fragment_timer"
         tools:layout="@layout/fragment_timer" />
     <fragment
         android:id="@+id/favoriteFragment"
-        android:name="com.example.gb_pprog.presentation.favoritefragment.FavoriteFragment"
+        android:name="com.example.gb_pprog.ui.favoritefragment.FavoriteFragment"
         android:label="fragment_favorite"
         tools:layout="@layout/fragment_favorite" />
 </navigation>
