--- a/app/src/main/res/menu/menu_bottom_navigation_view.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation_view.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/bottom_view_translator_fragment"
+        android:id="@+id/translatorFragment"
         android:icon="@drawable/ic_icon_translate"
         android:title="@string/bottom_view_icon_translator_title"/>
 
     <item
-        android:id="@+id/bottom_view_favorite_fragment"
+        android:id="@+id/favoriteFragment"
         android:icon="@drawable/ic_baseline_favorite_active"
         android:title="@string/bottom_view_icon_favorites_title"/>
 
     <item
-        android:id="@+id/bottom_view_timer_fragment"
+        android:id="@+id/timerFragment"
         android:icon="@drawable/ic_baseline_timer"
         android:title="@string/bottom_view_icon_timer_title"/>
 
