чистка кода и оптимизация импортов

--- a/app/src/main/res/layout/favorite_item.xml
+++ b/app/src/main/res/layout/favorite_item.xml
@@ -15,10 +15,10 @@
             android:id="@+id/favorite_item_word"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/secondaryTextColor"
-            android:textSize="24sp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:textColor="@color/secondaryTextColor"
+            android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/favorite_item_translation"
             app:layout_constraintEnd_toStartOf="@id/favorite_item_barrier"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,10 +29,10 @@
             android:id="@+id/favorite_item_translation"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/secondaryTextColor"
-            android:textSize="20sp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
+            android:textColor="@color/secondaryTextColor"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/favorite_item_barrier"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,19 +44,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="start"
-            app:constraint_referenced_ids="favorite_item_delete"/>
+            app:constraint_referenced_ids="favorite_item_delete" />
 
         <androidx.constraintlayout.utils.widget.ImageFilterButton
             android:id="@+id/favorite_item_delete"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_baseline_delete_24"
-            android:backgroundTint="@color/secondaryTextColorHighlight"
             android:layout_margin="8dp"
+            android:backgroundTint="@color/secondaryTextColorHighlight"
+            android:src="@drawable/ic_baseline_delete_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/favorite_item_barrier"/>
+            app:layout_constraintStart_toEndOf="@id/favorite_item_barrier"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
