--- a/app/src/main/res/drawable/translator_item_favorite_btn_drawable.xml
+++ b/app/src/main/res/drawable/translator_item_favorite_btn_drawable.xml
@@ -3,8 +3,7 @@
     <item>
         <shape android:shape="oval">
             <corners android:radius="999dp" />
-            <stroke android:width="1dp"
-                android:color="@color/secondaryTextColor"/>
+            <stroke android:width="1dp" android:color="@color/secondaryTextColor" />
         </shape>
     </item>
 </selector>
