--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -12,9 +12,9 @@
         tools:layout="@layout/fragment_translator" />
     <fragment
         android:id="@+id/timerFragment"
-        android:name="com.example.gb_pprog.ui.timerfragment.TimerFragment"
+        android:name="com.example.mytimer.ui.timerfragment.TimerFragment"
         android:label="fragment_timer"
-        tools:layout="@layout/fragment_timer" />
+        tools:layout="@layout/fragment_timer"/>
     <fragment
         android:id="@+id/favoriteFragment"
         android:name="com.example.gb_pprog.ui.favoritefragment.FavoriteFragment"
