--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -3,25 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation"
-    app:startDestination="@id/translatorFragment">
+    app:startDestination="@id/navigation">
 
-    <fragment
-        android:id="@+id/translatorFragment"
-        android:name="com.example.gb_pprog.ui.translatorfragment.TranslatorFragment"
-        android:label="fragment_first"
-        tools:layout="@layout/fragment_translator" >
-        <action
-            android:id="@+id/action_translatorFragment_to_favoriteFragment"
-            app:destination="@id/favoriteFragment" />
-    </fragment>
     <fragment
         android:id="@+id/timerFragment"
         android:name="com.example.mytimer.ui.timerfragment.TimerFragment"
         android:label="fragment_timer"
-        tools:layout="@layout/fragment_timer"/>
-    <fragment
-        android:id="@+id/favoriteFragment"
-        android:name="com.example.gb_pprog.ui.favoritefragment.FavoriteFragment"
-        android:label="fragment_favorite"
-        tools:layout="@layout/fragment_favorite" />
+        tools:layout="@layout/fragment_timer" />
+    <navigation
+        android:id="@+id/navigation"
+        app:startDestination="@id/translatorFragment">
+        <fragment
+            android:id="@+id/translatorFragment"
+            android:name="com.example.gb_pprog.ui.translatorfragment.TranslatorFragment"
+            android:label="fragment_first"
+            tools:layout="@layout/fragment_translator">
+            <action
+                android:id="@+id/action_translatorFragment_to_favoriteFragment"
+                app:destination="@id/favoriteFragment" />
+        </fragment>
+        <fragment
+            android:id="@+id/favoriteFragment"
+            android:name="com.example.gb_pprog.ui.favoritefragment.FavoriteFragment"
+            android:label="fragment_favorite"
+            tools:layout="@layout/fragment_favorite" />
+    </navigation>
 </navigation>
