--- a/app/src/main/res/menu/menu_bottom_navigation_view.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation_view.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation"
+        android:id="@+id/nav_graph_translator"
         android:icon="@drawable/ic_icon_translate"
         android:title="@string/bottom_view_icon_translator_title" />
 
