--- a/myTranslator/src/main/res/navigation/nav_graph_translator.xml
+++ b/myTranslator/src/main/res/navigation/nav_graph_translator.xml
@@ -13,10 +13,18 @@
         <action
             android:id="@+id/action_translatorFragment_to_favoriteFragment"
             app:destination="@id/favoriteFragment" />
+        <action
+            android:id="@+id/action_translatorFragment_to_detailsFragment"
+            app:destination="@id/detailsFragment" />
     </fragment>
     <fragment
         android:id="@+id/favoriteFragment"
         android:name="com.example.mytranslator.ui.favoritefragment.FavoriteFragment"
         android:label="fragment_favorite"
         tools:layout="@layout/fragment_favorite" />
+    <fragment
+        android:id="@+id/detailsFragment"
+        android:name="com.example.mytranslator.ui.detailsfragment.DetailsFragment"
+        android:label="fragment_details"
+        tools:layout="@layout/fragment_details" />
 </navigation>
